<resources>
    <string name="app_name">task-app</string>
    <string name="SummaryTitle">Summary</string>
    <string name="TaskToDo">Task To Do</string>
    <string name="TaskDoing">Task Doing</string>
    <string name="TaskDone">Task Done</string>
    <string name="New">New</string>
    <string name="ShowAll">Show All</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="Done">Done</string>
    <string name="LongDescription">Long description</string>
    <string name="ShortDescription">Short description</string>
    <string name="Percentage" />
    <string name="intPercentage">0%</string>
    <string name="ToDo">To Do</string>
    <string name="Doing">Doing</string>
    <string name="All">All</string>
    <string name="appName">Task app</string>
    <string name="TaskList">Task List</string>
    <string name="TaskDetail">Task Detail</string>
</resources>
